# la_porra

./: Cargo.toml  LAPorra_menu.sh  README.md  license.rtf  license.txt
meta/: Cargo.toml
meta/src/: main.rs
output/: la-porra.abi.json  la-porra.imports.json  la-porra.mxsc.json  la-porra.wasm
scenarios/: la_porra.scen.json
src/: la_porra.rs
tests/: la_porra_scenario_go_test.rs  la_porra_scenario_rs_test.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
